<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/translator"
            android:id="@+id/translator"
            android:icon="@drawable/ic_translate"
            />

        <item
            android:title="@string/about_app"
            android:icon="@drawable/ic_info"
            android:id="@+id/about_app"
            />

        <item
            android:title="@string/s9"
            android:icon="@drawable/ic_heart"
            android:id="@+id/subs"
            />

        <item
            android:title="@string/s17"
            android:icon="@drawable/ic_contacts"
            android:id="@+id/contacts"
            />
        <item
            android:title="@string/s18"
            android:icon="@drawable/ic_alphabet"
            android:id="@+id/alphabet"
            />

        <item
            android:title="@string/s3"
            android:icon="@drawable/ic_setting"
            android:id="@+id/setting"
            />
    </group>

</menu>