<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/text_bold"
            android:text="@string/s13"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/text_regular"
            android:text="@string/s14"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/s15"
            android:id="@+id/b_positive"
            android:background="@color/orange"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/s16"
            android:textSize="12sp"
            android:textColor="@color/text_gray"
            android:id="@+id/b_negative"
            android:background="@color/gray" />

    </LinearLayout>
</androidx.cardview.widget.CardView>