<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/tv_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s5"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:id="@+id/tv_desc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s5"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:id="@+id/tv_status"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s11"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:id="@+id/tv_price"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/orange"
        android:id="@+id/b_sub"
        android:text="@string/s12"/>



</LinearLayout>